--- a/src/index.css
+++ b/src/index.css
@@ -130,10 +130,15 @@ code {
   width: 20%;
   min-width: 120px;
   padding: 10px;
+  border-right: 2px solid rgb(8, 8, 8);
+  height: 100vh;
 }
 
-.setPageConv{
+.setPageCont{
   flex-grow: 1;
+  padding: 10px;
+  /* height: 100vh;
+  width: 100%; */
 }
 
 .butonInchisDeschis{
