--- a/src/index.css
+++ b/src/index.css
@@ -167,3 +167,15 @@ code {
 .yellow{
   color: yellow;
 } 
+
+.inputAscuns{
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  white-space: nowrap;
+  width: 1px;
+}
