--- a/src/index.css
+++ b/src/index.css
@@ -132,11 +132,14 @@ code {
   padding: 10px;
   border-right: 2px solid rgb(8, 8, 8);
   height: 100vh;
+  padding-top: 20px;
 }
 
 .setPageCont{
   flex-grow: 1;
   padding: 10px;
+  padding-top: 20px;
+
   /* height: 100vh;
   width: 100%; */
 }
